UF-17835: Updated API with includeDrafts parameter
